# Atlas

./: .gitattributes  .gitignore  ATLAS_CAT_GBM_OPENAI_OPTIMIZATION_BRIEF.md  ATLAS_SINGLE_GAME_SCRIPT_PROP_BRIEF_20260512.md  AtlasGoalsDoc.txt  Chatlog (3).txt  Fetch1.txt  Fetch2.txt  MetricsGlossary.txt  Remainingtouches.txt  TOOL_REGISTRY.yaml  _dbg_import.py  ab_diff_propkey.ps1  atlas.ps1  check_cache.py  config.telemetry_maxdev07.yaml  config.telemetry_prior10.yaml  config.telemetry_prior20.yaml  config.telemetry_prior5.yaml  config.telemetry_schema_v2.yaml  config.telemetry_tau100_min100.yaml  config.telemetry_tau100_min50.yaml  config.telemetry_tau200_min200.yaml  config.telemetry_tau200_min50.yaml  config.telemetry_tau400_min100.yaml  config.telemetry_tau400_min200.yaml  config.yaml  debug_slips.py  fta_test_run.txt  oplist_proxy.html  pp_model.code-workspace  pyproject.toml  requirements.txt  run.ps1  run_publish.cmd  run_today.py  rw_odds.html  temp_graphics.csv  temp_replay_top5.yaml  tmp_bucket_std.py  (+1 more)
ai/: AGENT.md  ATLAS_MODEL_CONTEXT.md  ATLAS_ROADMAP.md  AtlasSportsAI.md  BASELINE_V18.md  CONFIG_REFERENCE.md  KNOWN_UNCERTAINTIES.md  PIPELINE_REFERENCE.md  SCORED_LEGS_DEDUPED_DATA_DICTIONARY.md  TUNING_PLAYBOOK.md  WEBSITE_TODO.md
archives/: ARCHIVED_TOOLS_REFERENCE.md
docs/: 2026-05-09_playoff_adj.md  2026-05-10_playoff_adj.md  ATLAS_DIRECTORY_SPEC.md  ATLAS_MODEL_CONTEXT.md  Atlas_reader_guide_and_change_log.md  BASELINE_V12.md  BASELINE_V17.md  BASELINE_V18.md  BASELINE_V9D.md  BLOWOUT_CURVE_V1.md  CLI_LISTENER.md  CODEX_ISSUE_ROUTING.md  CRAFTEDNBA_ROLE_WORKLOAD_PLAN_2026-03-26.md  CURRENT_STATE_2026-05-10.md  DATA_DICTIONARY.md  DEMON_CALIBRATION_PROTECTION.md  DOCS_AUDIT_2026-05-11.md  FRAGILITY_FEATURE_RESEARCH_20260503.md  FUTURE_CHAT_REFERENCE_2026-03-24.md  KNOWN_UNCERTAINTIES.md  LATE_INJURY_HANDLING.md  Mermaid_run_today.txt  README.md  (+26 more)
(+14492 files in other folders)
