[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-engine"
version = "0.1.0"
description = "Atlas Decision Engine"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "requests",
  "pyyaml"
]

[tool.setuptools.packages.find]
where = ["src"]
