[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-engine"
version = "0.1.0"
description = "Atlas Sports AI decision engine, live pipeline, replay tooling, and dashboard payload builder"
readme = "docs/README.md"
requires-python = ">=3.11"
authors = [
  { name = "Atlas Sports AI" },
]
keywords = ["sports", "nba", "probability", "simulation", "calibration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "catboost>=1.2,<2",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scipy>=1.11",
]

[project.optional-dependencies]
data = [
  "nba-api>=1.10",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
]
graphics = [
  "matplotlib>=3.8",
  "pillow>=10.0",
]
train = [
  "joblib>=1.4",
  "lightgbm>=4.0,<5",
  "plotly>=6.0",
  "scikit-learn>=1.5",
]

[project.scripts]
atlas = "Atlas.cli:main"
nba = "NBA.cli:main"
atlas-listener = "Atlas.runtime.cli_listener:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
